--- a/TPGestionDeColonie/TPGestionDeColonie.csproj
+++ b/TPGestionDeColonie/TPGestionDeColonie.csproj
@@ -72,6 +72,7 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="ClassDiagram.cd" />
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
